--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,7 +62,7 @@ android {
             applicationId "com.om.louis.esc"
         }
         kalynda{
-            buildConfigField "String", "HOST", "\"https://www.kalynda-e-commerce.com/#/pages/views/login/index?isapp=1\""
+            buildConfigField "String", "HOST", "\"https://www.noah-e-commerce.com/#/pages/views/login/index?isapp=1\""
             applicationId "com.kd.kalynda.otc"
         }
         calfm{
@@ -99,7 +99,6 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     implementation "androidx.core:core-ktx:+"
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'com.github.liangjingkanji:StatusBar:2.0.2'
 }
 //repositories {
