--- a/app/build.gradle
+++ b/app/build.gradle
@@ -89,6 +89,10 @@ android {
             buildConfigField "String", "HOST", "\"https://lourentrade.com/\""
             applicationId "com.ot.louren.xk"
         }
+        omg {
+            buildConfigField "String", "HOST", "\"https://omnicommediagroupsd.com/#/pages/login/login?isapp=1/\""
+            applicationId "com.xt.omg.mk"
+        }
     }
     applicationVariants.all { variant ->
         variant.outputs.all {
