--- a/app/build.gradle
+++ b/app/build.gradle
@@ -93,6 +93,10 @@ android {
             buildConfigField "String", "HOST", "\"https://omnicomtz.com/#/pages/login/login?isapp=1/\""
             applicationId "com.xt.omg.mk"
         }
+        creator {
+            buildConfigField "String", "HOST", "\"https://e-creatoerzw.com/#/pages/views/login/index?isapp=1\""
+            applicationId "com.ex.creator.tg"
+        }
     }
     applicationVariants.all { variant ->
         variant.outputs.all {
@@ -118,7 +122,7 @@ dependencies {
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
-    implementation "androidx.core:core-ktx:+"
+    implementation "androidx.core:core-ktx:1.6.0"
     implementation 'com.github.liangjingkanji:StatusBar:2.0.2'
 }
 //repositories {
