--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,7 @@
         android:roundIcon="@mipmap/ic_app_icon"
         android:supportsRtl="true"
         android:usesCleartextTraffic="true"
+        android:hardwareAccelerated="true"
         android:theme="@style/Theme.HotMobile">
         <activity
             android:name=".SplashActivity"
@@ -27,6 +28,7 @@
             android:name=".MainActivity"
             android:exported="true"
             android:theme="@style/Theme.Design.Light.NoActionBar"
+            android:configChanges="orientation|screenSize|keyboardHidden"
             >
         </activity>
     </application>
