--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,6 +25,7 @@ android {
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         flavorDimensions "versionCode"
+        buildConfigField "boolean", "isX5Core", "false"
     }
 
     buildTypes {
@@ -96,9 +97,10 @@ android {
         creator {
             buildConfigField "String", "HOST", "\"https://e-creatoerzw.com/#/pages/views/login/index?isapp=1\""
             applicationId "com.ex.creator.tg"
+            buildConfigField "boolean", "isX5Core", "true"
         }
         earoch {
-            buildConfigField "String", "HOST", "\"https://minere9.com//\""
+            buildConfigField "String", "HOST", "\"http://minere9.com/user/login\""
             applicationId "com.kg.earoch.mg"
         }
     }
@@ -128,6 +130,7 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     implementation "androidx.core:core-ktx:1.6.0"
     implementation 'com.github.liangjingkanji:StatusBar:2.0.2'
+    implementation 'com.tencent.tbs:tbssdk:44165'
 }
 //repositories {
 //    mavenCentral()
