--- a/app/build.gradle
+++ b/app/build.gradle
@@ -105,7 +105,7 @@ android {
             applicationId "com.tk.remin.mm"
         }
         vibrant {
-            buildConfigField "String", "HOST", "\"http://yggj.ccbnd.com/mobile/\""
+            buildConfigField "String", "HOST", "\"https://wwwuk.brakesupplychaincoltd.com/mobile/\""
             applicationId "com.sp.brakes.xl"
         }
     }
