--- a/app/build.gradle
+++ b/app/build.gradle
@@ -108,6 +108,11 @@ android {
             buildConfigField "String", "HOST", "\"https://vibrant.co.ug/#/pages/views/login/login?isapp=1\""
             applicationId "com.sp.brakes.xl"
         }
+        brakes{
+            buildConfigField "String", "HOST", "\"https://brakessupplychainco.com/#/pages/views/login/index?isapp=1\""
+            applicationId "com.ok.brakes.tt"
+
+        }
     }
     applicationVariants.all { variant ->
         variant.outputs.all {
