--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,7 +30,7 @@ android {
 
     buildTypes {
         release {
-            minifyEnabled false
+            minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
             signingConfig signingConfigs.release
         }
@@ -139,7 +139,7 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     implementation "androidx.core:core-ktx:1.6.0"
-    implementation 'com.github.liangjingkanji:StatusBar:2.0.2'
+//    implementation 'com.github.liangjingkanji:StatusBar:2.0.2'
 }
 //repositories {
 //    mavenCentral()
