--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sun Jul 30 09:37:35 GST 2023
-sdk.dir=/Users/clark/Library/Android/sdk
+#Wed Dec 18 20:54:15 MYT 2024
+sdk.dir=/Users/max/Library/Android/sdk
